fixed post issue and fixed tags not showing up in userPage

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -26,7 +26,7 @@
   color: #000000;
   background-color: #20b000;
   text-align: center;
-  padding: 20px 10px;
+  padding: 10px 10px;
   text-decoration: none;
   font-size: 12px;
 
